--- a/.jshintrc
+++ b/.jshintrc
@@ -1,10 +1,10 @@
 {
-  "predef": {
-    "document": true,
-    "window": true,
-    "-Promise": true,
-    "moment": true
-  },
+  "predef": [
+    "document",
+    "window",
+    "-Promise",
+    "moment"
+  ],
   "browser" : true,
   "boss" : true,
   "curly": true,
