--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "ember-qunit-notifications": "0.0.4",
     "qunit": "~1.15.0",
     "moment": "~2.8.3",
-    "pure": "~0.5.0"
+    "pure": "~0.5.0",
+    "ember-localstorage-adapter": "~0.5.0"
   }
 }
