--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.0",
-    "broccoli-sass": "~0.6.1",
     "ember-cli": "0.2.0",
     "ember-cli-app-version": "0.3.2",
     "ember-cli-babel": "^4.0.0",
@@ -33,6 +31,6 @@
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.15",
     "ember-export-application-global": "^1.0.2",
-    "node-sass": "^3.0.0-alpha.0"
+    "broccoli-sass": "~0.6.2"
   }
 }
